--- a/project/project_03/0808_n면체주사위.ipynb
+++ b/project/project_03/0808_n면체주사위.ipynb
@@ -73,11 +73,12 @@
     "        return self.val\n",
     "\n",
     "    def setval(self,val=0):        \n",
+    "        val = int(val)\n",
     "        if val==0 : \n",
     "            # val값이 기본값(0)이 경우  \n",
     "            # 주사위 면의 수와 같거나 동일할 경우 1~n사이의 정수 값을 가져와서 val 설정 \n",
     "            self.val = self.get_rand_int()\n",
-    "        elif val <= self.n :\n",
+    "        elif 0<val and val <= self.n :\n",
     "            # n값을 지정할 경우 주사위 범위 내에 해당하는 값이면 n값대로 설정\n",
     "            self.val = val            \n",
     "        else : \n",
