n면체 주사위

--- a/project/project_0809/0808_nhedron_dice.ipynb
+++ b/project/project_0809/0808_nhedron_dice.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. n면체 주사위 만들기 (1) 기획\n",
-    "\n",
+    "## n면체 주사위 만들기 Quest 04\n",
+    "### 1. Quest 조건\n",
     "- 주사위 게임\n",
     "- 사용자가 원하면 주사위 숫자의 수는 달라질 수 있는 n면체 주사위를 클래스를 이용\n",
     "- 기능\n",
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 나의 설계\n",
+    "### 2. 나의 설계\n",
     "+ 필요한 속성 \n",
     "    + 주사의 면의 개수(num) : 인스턴스 생성 시 입력받을 수 있음. 입력이 없을시에는 기본값 6으로 셋팅\n",
     "    + 주사위 결과(result) : 주사위를 던졌을때 나온 결과 값 (랜덤으로 1~면의개수의 정수 중에 한 값을 가져옴)\n",
@@ -29,6 +29,13 @@
     "    + 주사위 결과 보기 (get_result()) : 설정된 주사위 결과값 출력 및 반환\n",
     "    + 조커num 설정 (set_joker(joker_num=0)) : 조거 결과를 1~면의개수 사이에 정수 1개로 랜덤하게 설정\n",
     "    + 조커num 결과 보기 (get_joker()) : 조커의 결과 출력 및 반환\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 코드"
    ]
   },
   {
@@ -121,6 +128,39 @@
     "if __name__ == '__main__':\n",
     "    main()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 프로젝트 회고"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### 1) 느낀점\n",
+    "파이썬 노드를 공부하고 간단한 프로젝트를 만들었다.\n",
+    "파이썬 사용을 기본적으로 할 줄 알아서 크게 어려운 점은 없었고\n",
+    "추가로 조커 기능을 커스텀하여 넣어서 스스로 조건을 생각하고 변수와 메서드를 추가해보았다. \n",
+    "\n",
+    "#### 2) 심화\n",
+    "그리고 노드에서 제공된 코드 중에 \n",
+    "if __name__ == '__main__': \n",
+    "해당 구문이 생소하여 따로 조사하여 공부해보았다.\n",
+    "\n",
+    "'name이라는 변수의 값이 main이라면 아래의 코드를 실행하라는 뜻인데\n",
+    "메인 함수의 선언, 시작을 의미하고, 현재 스크립트 파일이 실행되는 상태를 파악하기 위해 사용한다고 한다. 파이썬의 코드는 main 함수가 따로 존재하지 않는데  보통 들여쓰기를 통해 코드의 실행 레벨을 결정한다. \n",
+    "\n",
+    "__name__ 내장변수은 현재 모듈의 이름을 담고 있는 내장 변수로서, 직접 실행된 모듈의 경우는 __main__이라는 값을 가지게 되고, 직접 실행되지 않은 import 된 모듈은 모듈의 이름(파일명)을 가지게 된다. 어떤 스크립트 파일이든 파이썬 인터프리터가 최초로 실행한 스크립트 파일의 __name__ 에는 '__main__'이 들어간다. 이는 프로그램의 시작점(entry point)라는 뜻이다.\n",
+    "\n",
+    "쉽게 생각하면 모듈에 if __name__=='__main__'이라는 조건문을 넣어주고 그 아래는 직접 실행시켰을 때만 실행되길 원하는 코드들을 넣어주는 것으로 생각하면 쉬울 것\n",
+    "\n",
+    "#### 3) 참조\n",
+    "[if __name__ == “__main__”은 왜 필요한지에 대해 알아보자](https://velog.io/@mjk3136/if-name-main%EC%9D%80-%EC%99%9C-%ED%95%84%EC%9A%94%ED%95%9C%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%B4-%EC%95%8C%EC%95%84%EB%B3%B4%EC%9E%90)"
    ]
   }
  ],
