--- a/project/project_0809/0808_nhedron_dice.ipynb
+++ b/project/project_0809/0808_nhedron_dice.ipynb
@@ -40,18 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "주사위 면의 개수 5\n",
+      "설정된 주사위 면의 개수: 5\n",
+      "주사위를 던집니다.\n",
       "조커값은 4 입니다.\n",
       "주사위 값은 4 입니다.\n",
       "조커 값이 나왔습니다. 주사위를 다시 한번 던집니다\n",
-      "행운의 숫자는? 5\n"
+      "최종 주사위 숫자 : 5\n"
      ]
     }
    ],
@@ -68,12 +69,13 @@
     "    def throw(self) :\n",
     "        print('주사위를 던집니다.')        \n",
     "        self.setval()           # 주사위값 랜덤 설정\n",
+    "        self.set_joker_val()    # 조커값 설정                               \n",
     "        if(self.joker_val==self.val) : # 조커값과 주사위결과값이 같다면\n",
     "            self.print_joker_val()  # 조커값 출력\n",
     "            self.printval()         # 주사위값 출력\n",
     "            print(\"조커 값이 나왔습니다. 주사위를 다시 한번 던집니다\")\n",
     "            self.set_joker_val(0)   # 조커값 0으로 초기화\n",
-    "            self.setval()           # 주사위값 랜덤 설정\n",
+    "            self.setval(-1)           # 주사위값 랜덤 설정\n",
     "            #self.printval()            \n",
     "      \n",
     "    def getval(self):\n",
@@ -81,16 +83,22 @@
     "\n",
     "    def setval(self,val=0):        \n",
     "        val = int(val)\n",
-    "        if val==0 : \n",
+    "        if self.val==0 : \n",
     "            # val값이 기본값(0)이 경우  \n",
-    "            # 주사위 면의 수와 같거나 동일할 경우 1~n사이의 정수 값을 가져와서 val 설정 \n",
+    "            # 주사위 면의 수와 같거나 동일할 경우 1~n사이의 정수 값을 가져와서 val 설정             \n",
+    "            self.val = self.get_rand_int()            \n",
+    "        elif val ==-1 : \n",
+    "            # 재 도전\n",
     "            self.val = self.get_rand_int()\n",
+    "            \n",
     "        elif 0<val and val <= self.n :\n",
     "            # n값을 지정할 경우 주사위 범위 내에 해당하는 값이면 n값대로 설정\n",
     "            self.val = val            \n",
     "        else : \n",
     "            msg = f\"주사위에 없는 숫자입니다. 주사위는 1 ~ {self.n}까지 있습니다.\"\n",
+    "\n",
     "            raise ValueError(msg)\n",
+    "        \n",
     "        \n",
     "    def printval(self):\n",
     "        print('주사위 값은',self.val,'입니다.')\n",
@@ -120,10 +128,10 @@
     "\n",
     "def main():\n",
     "    n = get_inputs()\n",
-    "    print(\"주사위 면의 개수\",n)\n",
-    "    mydice = FunnyDice()\n",
+    "    print(\"설정된 주사위 면의 개수:\",n)\n",
+    "    mydice = FunnyDice(n)\n",
     "    mydice.throw()\n",
-    "    print(\"행운의 숫자는? {0}\".format(mydice.getval()))\n",
+    "    print(\"최종 주사위 숫자 : {0}\".format(mydice.getval()))\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    main()\n",
@@ -180,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
