--- a/project/project_0906/4-2_project_classification.ipynb
+++ b/project/project_0906/4-2_project_classification.ipynb
@@ -1368,24 +1368,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model_fit_pred(model_name_str,model,X_train, y_train,X_test,y_test) :\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    print(model_name_str, 'accuracy : ',accuracy_score(y_test, y_pred))\n",
+    "    return y_pred\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decision_tree_accuracy : 0.87719\n",
-      "decision_tree_precision : 0.87045\n",
-      "decision_tree_recall : 0.87045\n",
-      "decision_tree_f1 : 0.87045\n",
+      "DecisionTreeClassifier accuracy :  0.9210526315789473\n",
+      "RandomForestClassifier accuracy :  0.9385964912280702\n",
+      "svm_model accuracy :  0.868421052631579\n",
+      "sgd_model accuracy :  0.9035087719298246\n",
+      "logistic_model accuracy :  0.9210526315789473\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decision Tree 사용해 보기\n",
+    "decision_tree = DecisionTreeClassifier(random_state=32) # decisionTree 분류기 객체 생성\n",
+    "decision_tree_y_pred=model_fit_pred('DecisionTreeClassifier',logistic_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# Random Forest 사용해 보기\n",
+    "random_forest = RandomForestClassifier(random_state=32) # RandomForest 분류기 객체 생성\n",
+    "random_forest_y_pred=model_fit_pred('RandomForestClassifier',random_forest,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# SVM 사용해 보기\n",
+    "svm_model = svm.SVC(random_state=32) # SVM 모델 객체 생성\n",
+    "svm_model_y_pred=model_fit_pred('svm_model',svm_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# SGD Classifier 사용해 보기\n",
+    "sgd_model = SGDClassifier(random_state=32) # SGD Classifier 모델 객체 생성\n",
+    "sgd_model_y_pred=model_fit_pred('sgd_model',sgd_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# Logistic Regression 사용해 보기\n",
+    "logistic_model = LogisticRegression(max_iter=3000,random_state=32) # Logistic Regression  모델 객체 생성\n",
+    "logistic_model_y_pred=model_fit_pred('logistic_model',logistic_model,X_train,y_train,X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decision_tree_accuracy : 0.92105\n",
+      "decision_tree_precision : 0.91828\n",
+      "decision_tree_recall : 0.91461\n",
+      "decision_tree_f1 : 0.91636\n",
       "-----------------------------------\n",
       "random_forest_accuracy : 0.93860\n",
       "random_forest_precision : 0.93382\n",
@@ -1438,8 +1483,35 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
+    "\n",
+    "# Decision Tree 사용해 보기\n",
+    "decision_tree = DecisionTreeClassifier(random_state=32) # decisionTree 분류기 객체 생성\n",
+    "decision_tree_y_pred=model_fit_pred('DecisionTreeClassifier',logistic_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# Random Forest 사용해 보기\n",
+    "random_forest = RandomForestClassifier(random_state=32) # RandomForest 분류기 객체 생성\n",
+    "random_forest_y_pred=model_fit_pred('RandomForestClassifier',random_forest,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# SVM 사용해 보기\n",
+    "#svm_model = svm.SVC(random_state=32) # SVM 모델 객체 생성\n",
+    "svm_model = SVC(kernel='rbf', C=10, gamma=0.1)  # 이 값들은 일반적으로 좋은 성능을 보이는 값들입니다. 하지만 최적의 값은 데이터에 따라 다를 수 있습니다.\n",
+    "svm_model_y_pred=model_fit_pred('svm_model',svm_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# SGD Classifier 사용해 보기\n",
+    "sgd_model = SGDClassifier(random_state=32) # SGD Classifier 모델 객체 생성\n",
+    "sgd_model_y_pred=model_fit_pred('sgd_model',sgd_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "# Logistic Regression 사용해 보기\n",
+    "logistic_model = LogisticRegression(max_iter=3000,random_state=32) # Logistic Regression  모델 객체 생성\n",
+    "logistic_model_y_pred=model_fit_pred('logistic_model',logistic_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "\n",
+    "\n",
     "# SVM 모델 학습 및 평가\n",
     "svm_model = SVC(kernel='rbf', C=10, gamma=0.1)  # 이 값들은 일반적으로 좋은 성능을 보이는 값들입니다. 하지만 최적의 값은 데이터에 따라 다를 수 있습니다.\n",
+    "svm_model_y_pred=model_fit_pred('svm_model',svm_model,X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "\n",
     "svm_model.fit(X_train_scaled, y_train)\n",
     "svm_pred = svm_model.predict(X_test_scaled)\n",
     "svm_accuracy = accuracy_score(y_test, svm_pred)\n",
