--- a/project/project_0918/4-11_PJT_CAFE.ipynb
+++ b/project/project_0918/4-11_PJT_CAFE.ipynb
@@ -27,10 +27,10 @@
    "metadata": {},
    "source": [
     "+ 데이터 \n",
-    "    + `entry_data`: '모두 스터디카페'의 `시간별 입장 기록` 데이터\n",
-    "    + `sales_data`: '모두 스터디카페'의 `시간별 음식/음료 판매` 데이터\n",
-    "    + `item_data`: '모두 스터디카페'에서 판매하고 있는 `음식/음료 종류와 가격`\n",
-    "    + `item_entry_data`: '모두 스터디카페'에서 판매하고 있는 `입장권 종류와 가격`\n"
+    "    + `entry_data`: '모두 스터디카페의 `시간별 입장 기록` 데이터\n",
+    "    + `sales_data`: 모두 스터디카페의 `시간별 음식/음료 판매` 데이터\n",
+    "    + `item_data`: 모두 스터디카페에서 판매하고 있는 `음식/음료 종류와 가격`\n",
+    "    + `item_entry_data`: 두 스터디카페에서 판매하고 있는 `입장권 종류와 가격`\n"
    ]
   },
   {
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
     "+ __③ 티켓 판매 상위 7위 분포 확인__\n",
     "    + 약 57%가 한국대생 종일권 입장권(학국대생 입장권(종일권+한국대생 무제한입장권))\n",
     "    + 종일권과 심야-조조무제한 각각 약 16.5%\n",
-    "    + 약 5% 한시간 요즘제 순으로 많았음"
+    "    + 약 5% 한시간 요금제 순으로 많았음"
    ]
   },
   {
@@ -2233,6 +2233,107 @@
     "plt.pie( x=entry_counts, labels=entry_counts.index, autopct='%.2f%%', startangle=45)\n",
     "plt.title('Ticket Sales Top 7')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 결론\n",
+    "1. 월별 매출액 추세\n",
+    "    + 학기 중에는 매출액이 높고, 방학 중에는 매출액이 낮음\n",
+    "2. 가장 인기있는 메뉴와 음료\n",
+    "    + 판매량 : 김치볶음밥, 라면, 짜장라면, 치즈불고기볶음밥, 계란추가, 낙지볶음밥, 새우볶음밥, 아메리카노(ICE), 치즈감자튀김, 감자튀김\n",
+    "    + 판매금액 : 김치볶음밥, 라면, 치즈불고기 볶음밥, 짜장라면, 낙지볶음밥, 새우볶음밥, 치즈감자튀김, 감자튀김, 아메리카노(ICE), 불닭볶음면\n",
+    "3. 가장 많이 팔린 입장권 종류 \n",
+    "    + 한국대생 입장권(종일권)\n",
+    "4. 내가 정의한 문제\n",
+    "    + 월별 인기메뉴 : 김치볶음밥, 라면, 치즈불고기볶음밥 3가지의 월별 판매량 확인\n",
+    "        + 김치볶음밥은 계절 관계없이 항상 판매량이 높다\n",
+    "        + 라면은 동절기에, 치즈불고기 볶음밥은 하절기에 인기가 좋다.    \n",
+    "    + 인기없는 품목\n",
+    "        + 분석내용\n",
+    "            + 전체 메뉴 수 : 100개 \n",
+    "            + 판매량 하위 30 메뉴 확인\n",
+    "            + 누적 결제금액 5만원 미만 메뉴 : 총 48개\n",
+    "            + 누적 주문횟수 20회 미만 메뉴 : 총 62개\n",
+    "            + 누적 결제금액 5만원 미만이면서 누적 주문횟수 20회 미만 메뉴 : 총 43개\n",
+    "        + 결론\n",
+    "            + 메뉴수가 너무 많아서, 누적 결제금액과 주문 횟수를 바탕으로 없애면 좋을 메뉴를 선정해보았다.           + 추가 메뉴를 제외한 없애면 좋을 메뉴는 아래와 같다.           \n",
+    "            + '2인불닭','고구마라떼(HOT)','고구마라떼(ICE)','녹차(HOT)','녹차(ICE)','녹차라떼(HOT)','녹차라떼(ICE)','녹차쉐이크','라면(계란/치즈추가)','레몬차(HOT)','레몬차(ICE)','망고스무디','민트초코라떼(ICE)','바닐라라떼(HOT)','비엔나소세지(토핑)','시럽추가','오늘은 순살닭다리 덮밥','오늘은 한돈간장불고기','오늘은 한돈고추장불고기','유자에이드','유자차(HOT)','유자차(ICE)','이어폰(커널형)','자몽차(HOT)','자몽차(ICE)','청귤커피(HOT)','초코라떼(HOT)','치킨카라아케 10pc','카라멜마끼아또(HOT)','카라멜마끼아또(ICE)','카모마일(HOT)','카모마일(ICE)','카페라떼(HOT)','카페모카(HOT)','커피쉐이크','페퍼민트(HOT)','페퍼민트(ICE)''헤이즐넛라떼(HOT)     \n",
+    "    + 티켓 판매 상위 7위 분포 확인\n",
+    "        + 분석내용\n",
+    "            + 약 57%가 한국대생 종일권 입장권(학국대생 입장권(종일권+한국대생 무제한입장권))\n",
+    "            + 종일권과 심야-조조무제한 각각 약 16.5%\n",
+    "            + 약 5% 한시간 요금제 순으로 많았다\n",
+    "        + 결론\n",
+    "            + 한국대생 이용객이 많고, 대부분 종일 이용한다.\n",
+    "            + 일반인들은 심야-조조 이용객이 많고\n",
+    "            + 아니면 한번 체험해보는 식으로 1시간씩 즐기는 사람들이 많다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 회고\n",
+    "---\n",
+    "#### 프로젝트 목표\n",
+    "1. 월별 매출액 추세\n",
+    "2. 가장 인기있는 메뉴와 음료\n",
+    "3. 가장 많이 팔린 입장권 종류 \n",
+    "4. 내가 정의한 문제\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 성과 및 결과\n",
+    "1. 월별 매출액 추세\n",
+    "    + 학기 중에는 매출액이 높고, 방학 중에는 매출액이 낮음\n",
+    "2. 가장 인기있는 메뉴와 음료\n",
+    "    + 판매량 : 김치볶음밥, 라면, 짜장라면, 치즈불고기볶음밥, 계란추가, 낙지볶음밥, 새우볶음밥, 아메리카노(ICE), 치즈감자튀김, 감자튀김\n",
+    "    + 판매금액 : 김치볶음밥, 라면, 치즈불고기 볶음밥, 짜장라면, 낙지볶음밥, 새우볶음밥, 치즈감자튀김, 감자튀김, 아메리카노(ICE), 불닭볶음면\n",
+    "3. 가장 많이 팔린 입장권 종류 \n",
+    "    + 한국대생 입장권(종일권)\n",
+    "4. 내가 정의한 문제\n",
+    "    + 월별 메뉴별 판매량 : 김치볶음밥, 라면, 치즈불고기볶음밥 3가지의 월별 판매량 확인\n",
+    "        + 김치볶음밥은 계절 관계없이 항상 판매량이 높다\n",
+    "        + 라면은 동절기에, 치즈불고기 볶음밥은 하절기에 인기가 좋다.    \n",
+    "    + 인기없는 품목\n",
+    "        + 분석내용\n",
+    "            + 전체 메뉴 수 : 100개 \n",
+    "            + 판매량 하위 30 메뉴 확인\n",
+    "            + 누적 결제금액 5만원 미만 메뉴 : 총 48개\n",
+    "            + 누적 주문횟수 20회 미만 메뉴 : 총 62개\n",
+    "            + 누적 결제금액 5만원 미만이면서 누적 주문횟수 20회 미만 메뉴 : 총 43개\n",
+    "        + 결론\n",
+    "            + 메뉴수가 너무 많아서, 누적 결제금액과 주문 횟수를 바탕으로 없애면 좋을 메뉴를 선정해보았다.           + 추가 메뉴를 제외한 없애면 좋을 메뉴는 아래와 같다.           \n",
+    "            + '2인불닭','고구마라떼(HOT)','고구마라떼(ICE)','녹차(HOT)','녹차(ICE)','녹차라떼(HOT)','녹차라떼(ICE)','녹차쉐이크','라면(계란/치즈추가)','레몬차(HOT)','레몬차(ICE)','망고스무디','민트초코라떼(ICE)','바닐라라떼(HOT)','비엔나소세지(토핑)','시럽추가','오늘은 순살닭다리 덮밥','오늘은 한돈간장불고기','오늘은 한돈고추장불고기','유자에이드','유자차(HOT)','유자차(ICE)','이어폰(커널형)','자몽차(HOT)','자몽차(ICE)','청귤커피(HOT)','초코라떼(HOT)','치킨카라아케 10pc','카라멜마끼아또(HOT)','카라멜마끼아또(ICE)','카모마일(HOT)','카모마일(ICE)','카페라떼(HOT)','카페모카(HOT)','커피쉐이크','페퍼민트(HOT)','페퍼민트(ICE)''헤이즐넛라떼(HOT)     \n",
+    "    + 티켓 판매 상위 7위 분포 확인\n",
+    "        + 분석내용\n",
+    "            + 약 57%가 한국대생 종일권 입장권(학국대생 입장권(종일권+한국대생 무제한입장권))\n",
+    "            + 종일권과 심야-조조무제한 각각 약 16.5%\n",
+    "            + 약 5% 한시간 요금제 순으로 많았다\n",
+    "        + 결론\n",
+    "            + 한국대생 이용객이 많고, 대부분 종일 이용한다.\n",
+    "            + 일반인들은 심야-조조 이용객이 많고\n",
+    "            + 아니면 한번 체험해보는 식으로 1시간씩 즐기는 사람들이 많다.\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 개선할 점\n",
+    "+ 월별분포가 top3 김치볶음밥, 라면, 치즈불고기 볶음밥만 나오는데 실제 매월 top3가 이런건지, 변수가 고정되서 나오는지 애매한 것 같다. 추가적으로 테스트가 필요한 부분인 것 같다.\n",
+    "\n",
+    "#### 결론\n",
+    "+ 비인기 메뉴로 메뉴수를 축소해서 원가절감\n",
+    "+ 한국대생이 주 고객층이므로 한국대생 관련 이벤트를 진행하면 좋을 것 같다.\n",
+    "+ 그 외 일반인들 판매는 심야-조조타임으로 이에 관련하여 추가적인 혜택이나 편의가 되면 일반인 고객도 늘릴 수 있을 것 같다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
